--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "@react-navigation/bottom-tabs": "^7.0.4",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.3",
+    "@tanstack/react-query": "^5.60.5",
+    "@types/react-native-snap-carousel": "^3.8.11",
+    "axios": "^1.7.7",
     "expo": "~52.0.7",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-heroicons": "^4.0.0",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0"
+    "react-native-screens": "~4.1.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
